--- a/_posts/2020-07-03-CWE658-1.md
+++ b/_posts/2020-07-03-CWE658-1.md
@@ -8,18 +8,15 @@ last_modified_at: 2021-01-14
 layout: post
 ---
 - 소프트웨어 보안 취약점을 분류한 CWE(Common Weakness Enumeration) 개요를 소개한다.
-
-
-
-- CWE는 다음 URI에서 확인할 수 있다.
-Link: <https://cwe.mitre.org/>
+- CWE는 다음 URI에서 확인할 수 있다.<br>
+URI: <https://cwe.mitre.org/>
 
 
 
 ## CWE(Common Weakness Enumeration)란?
 - CWE는 보안에 영향을 미치는 소프트웨어 및 하드웨어의 보안 약점(weaknesses) 유형을 정리한 목록이다. CWE 목록은 약점을 식별하고 이에 대한 설명이 기술되어 있으며, CWE 목록을 준수하면 보안 취약점을 방지할 수 있다. 참고로 하드웨어(산업 제어 시스템과 의료기기, 자동차 및 웨어러블 등) 보안 취약점에 대한 지원은 2020년 부터 시작되었다.
 - 2020.12.10에 발표된 CWE 4.3 버전 기준, 총 916개의 취약점 리스트가 존재한다. (suresoft의 최신 static 버전은 3.2 버전을 지원한다.)
-- 소프트웨어 관련 항목 중 대표적인 프로그래밍 언어인 C, C++, JAVA의 취약점을 다루는 view는 다음과 같다.
+- 소프트웨어 관련 항목 중 대표적인 프로그래밍 언어인 C, C++, JAVA의 취약점을 다루는 view는 다음과 같다.<br>
 CWE-658: 총 81개의 C 약점으로 구성된다.<br>
 CWE-659: 총 85개의 C++ 약점으로 구성된다.<br>
 CWE-660: 총 75개의 JAVA 약점으로 구성된다.
